# disco-live

./: .gitignore  README.md  build.sh  cabal.project  disco-live.cabal  flake.nix  package.sh
.github/workflows/: webpage.yml
src/: Eval.hs  Interpreter.hs  Main.hs  State.hs
www/: disco-live.html  index.html  runtime.js
www/js/: editor.js
