cabal-version:   3.0
name:            disco-live

-- Package Versioning Policy: https://pvp.haskell.org
-- PVP summary:  +-+------- breaking API changes
--               | | +----- non-breaking API additions
--               | | | +--- code changes with no API change
version:         0.1.0.0
synopsis:        Disco Web UI

category:        Language
license:         BSD-3-Clause
license-file:    LICENSE
author:          Disco team, Heinrich Apfelmus
maintainer:      byorgey@gmail.com
copyright:       Disco team 2025-2026 (see LICENSE)
extra-doc-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/disco-lang/disco.git

tested-with:         GHC ==9.12.2

executable disco-live
  -- Compiler options that are necessary for the WASM backend.
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=setup"

  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends:
    , ghc-experimental ^>=0.1 || (>=9.1000 && <9.1300)
    , base         >=4.8     && <4.22
--    , disco        >=0.2     && <0.3
    , text         >=2.0.2   && <2.2

  other-modules:
    Eval
